--- a/style.css
+++ b/style.css
@@ -4,33 +4,43 @@
 }
 
 body{
-    background-image: url("bg.jpeg");
+    user-select: none;
+    background-image: url("bg.webp");
     background-size: cover;
     overflow: hidden;
     height: 100vh;
 }
 
 .taskbar{
+    cursor: pointer;
     display: flex;
     justify-content: center;
     position: absolute;
     width: 100%;
     bottom: 0px;
     background-color: #f2f2f2;
+    -webkit-box-shadow: 0px -1px 0px 0px rgba(199,199,199,1);
+    -moz-box-shadow: 0px -1px 0px 0px rgba(199,199,199,1);
+    box-shadow: 0px -1px 0px 0px rgba(199,199,199,1);
+    z-index: 999;
 }
 
-.startmenu{
+.startmenu {
+    border-radius: 10px;
     position: absolute;
-    /* bottom: 50px; */
     bottom: -655px;
-    width: 100%;
+    width: auto;
+    margin-left: 400px;
+    margin-right: 400px;
     text-align: center;
-    transition: all 0.3s ease-in;
+    -webkit-box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.3);
+    transition: all 0.2s ease-in-out;
 }
 
-.startmenu img{
-    border-radius: 12px;
-    /* width: 40%; */
+.startmenu img {
+    border-radius: 10px;
 }
 
 .right{
@@ -39,7 +49,9 @@ body{
     margin: 5px 0px;
     height: 85%;
 }
-
+.app-name {
+    text-shadow: 0px 0px 3px #000;
+}
 .icons{
     padding-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
@@ -53,7 +65,9 @@ body{
 .icons #chrometxt{
     padding-left: 12.5px;
 }
-
+.icons #chromeicon{
+    margin-left: 13px;
+}
 .icons #edgeicon{
     margin-top: 16px;
     margin-left: 14px;
