--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ body{
     height: 85%;
 }
 .app-name {
-    text-shadow: 0px 0px 3px #000;
+    text-shadow: 0px 0px 2.5px #000;
+    text-align: center;
 }
 .icons{
     padding-top: 10px;
@@ -69,7 +70,7 @@ body{
     margin-left: 13px;
 }
 .icons #edgeicon{
-    margin-top: 16px;
+    margin-top: 18px;
     margin-left: 14px;
 }
 .icons #edgeicon+div{
@@ -78,7 +79,7 @@ body{
 }
 
 .icons #edgeicon+div+img{
-    margin-top: 16px;
+    margin-top: 18px;
     margin-left: 11px;
 }
 
