--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@
 
 body{
     user-select: none;
-    background-image: url("bg.webp");
+    background-image: url("../images/bg.webp");
     background-size: cover;
     overflow: hidden;
     height: 100vh;
